prevent  horizontal scrollbars for code

--- a/assets/scss/_syntax-highlighting.scss
+++ b/assets/scss/_syntax-highlighting.scss
@@ -8,6 +8,8 @@
 
   .highlighter-rouge &, &, .hll, pre, code {
     background-color: lighten($light-gray-color, 15%) !important;
+    overflow: visible; // Prevents horizontal scrollbars
+
   }
 
   pre {
@@ -33,6 +35,8 @@
       }
     }
   }
+
+
 
   .c     { color: #998; font-style: italic } // Comment
   .err   { color: #a61717; background-color: #e3d2d2 } // Error
